# jetson-apriltag

./: .gitignore  INSTALL.md  LICENSE  PUSH_TO_GITHUB.md  QUICK_PUSH.md  README.md  install.sh  push_commands.sh  push_to_github.sh  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: test_fps.py
jetson_apriltag/: __init__.py  wrapper.py
jetson_apriltag/arducam/: arducam_client.py  arducam_cuda_yuv_grayscale.py  arducam_gpu_grayscale.py  arducam_monochrome_720p.py  arducam_nvidia_isp_grayscale.py  arducam_server.py  arducam_stream.py  arducam_x11_display.py  arducam_yuv_direct_grayscale.py  arducam_yuv_grayscale.py  arducam_yuv_grayscale_fast_display.py  arducam_yuv_grayscale_optimized.py
scripts/: arducam_setup.sh  run_nt_publisher.py
